--- a/src/Lanting.IDCode.Core/Localization/SourceFiles/IDCode.xml
+++ b/src/Lanting.IDCode.Core/Localization/SourceFiles/IDCode.xml
@@ -1,95 +1,95 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <localizationDictionary culture="en">
   <texts>
-    <text name="HomePage" value="Home page" />
-    <text name="About" value="About" />
-    <text name="WellcomeMessage" value="Welcome to IDCode!" />
-    <text name="FormIsNotValidMessage" value="Form is not valid. Please check and fix errors." />
+    <text name="HomePage" value="主页" />
+    <text name="About" value="使用说明" />
+    <text name="WellcomeMessage" value="欢迎" />
+    <text name="FormIsNotValidMessage" value="表单有错误，请检查" />
     <text name="TenantNameCanNotBeEmpty" value="Tenant name can not be empty" />
     <text name="InvalidUserNameOrPassword" value="Invalid user name or password" />
     <text name="ThereIsNoTenantDefinedWithName{0}" value="There is no tenant defined with name {0}" />
     <text name="TenantIsNotActive" value="Tenant {0} is not active." />
-    <text name="UserIsNotActiveAndCanNotLogin" value="User {0} is not active and can not log in." />
-    <text name="UserEmailIsNotConfirmedAndCanNotLogin">Your email address is not confirmed. You can not login.</text>
-    <text name="UserLockedOutMessage">The user account has been locked out. Please try again later.</text>
-    <text name="PleaseEnterLoginInformation" value="Please enter login information" />
-    <text name="TenancyName" value="Tenancy name" />
-    <text name="UserNameOrEmail" value="User name or email" />
-    <text name="Password" value="Password" />
-    <text name="RememberMe" value="Remember me" />
-    <text name="LogIn" value="Log in" />
-    <text name="LoginFailed" value="Login failed!" />
-    <text name="NameSurname" value="Name surname" />
-    <text name="UserName" value="User name" />
-    <text name="Name" value="Name" />
-    <text name="Surname" value="Surname" />
-    <text name="EmailAddress" value="Email address" />
+    <text name="UserIsNotActiveAndCanNotLogin" value="用户 {0} 无效，不能登录" />
+    <text name="UserEmailIsNotConfirmedAndCanNotLogin">邮箱地址无效，不能登录</text>
+    <text name="UserLockedOutMessage">帐号被锁定，不能登录</text>
+    <text name="PleaseEnterLoginInformation" value="请输入登录信息" />
+    <text name="TenancyName" value="租户名" />
+    <text name="UserNameOrEmail" value="用户名或邮箱" />
+    <text name="Password" value="密码" />
+    <text name="RememberMe" value="记住我" />
+    <text name="LogIn" value="登录" />
+    <text name="LoginFailed" value="登录失败!" />
+    <text name="NameSurname" value="昵称" />
+    <text name="UserName" value="用户名" />
+    <text name="Name" value="用户名" />
+    <text name="Surname" value="昵称" />
+    <text name="EmailAddress" value="邮箱地址" />
     <text name="Tenants" value="Tenants" />
-    <text name="SavedSuccessfully" value="Saved successfully" />
-    <text name="CreateNewTenant" value="Create new tenant" />
-    <text name="AdminEmailAddress" value="Admin email address" />
-    <text name="Save" value="Save" />
-    <text name="Cancel" value="Cancel" />
+    <text name="SavedSuccessfully" value="保存成功" />
+    <text name="CreateNewTenant" value="创建新租户" />
+    <text name="AdminEmailAddress" value="管理员邮箱地址" />
+    <text name="Save" value="保存" />
+    <text name="Cancel" value="取消" />
     <text name="TenantName_Regex_Description" value="Tenant name must be at least 2 chars, starts with a letter and continue with letter, number, dash or underscore." />
-    <text name="DefaultPasswordIs" value="Default password is {0}" />
+    <text name="DefaultPasswordIs" value="默认密码是 {0}" />
     <text name="CanBeEmptyToLoginAsHost" value="Can be empty to login as host." />
-    <text name="Register" value="Register" />
+    <text name="Register" value="注册" />
     <text name="OrLoginWith" value="Or login with" />
-    <text name="WaitingForActivationMessage" value="Your account is waiting to be activated by system admin." />
+    <text name="WaitingForActivationMessage" value="帐号待激活" />
     <text name="TenantSelection" value="Tenant Selection" />
     <text name="TenantSelection_Detail" value="Please select one of the following tenants." />
-    <text name="Logout" value="Logout" />
-    <text name="RegisterFormUserNameInvalidMessage">Please don't enter an email address for username.</text>
+    <text name="Logout" value="注销" />
+    <text name="RegisterFormUserNameInvalidMessage">请不要将邮箱作为用户名</text>
     <text name="DatabaseConnectionString" value="Database connection string" />
-    <text name="Users" value="Users" />
-    <text name="IsActive" value="Is active" />
-    <text name="FullName" value="Full name" />
-    <text name="CreateNewUser" value="Create new user" />
-    <text name="Yes" value="Yes" />
-    <text name="No" value="No" />
-    <text name="Optional" value="Optional" />
+    <text name="Users" value="用户" />
+    <text name="IsActive" value="有效" />
+    <text name="FullName" value="全称" />
+    <text name="CreateNewUser" value="新建用户" />
+    <text name="Yes" value="是" />
+    <text name="No" value="否" />
+    <text name="Optional" value="可选" />
     <text name="LeaveEmptyToSwitchToHost">Leave empty to switch to the host</text>
     <text name="CurrentTenant">Current tenant</text>
-    <text name="NotSelected">Not selected</text>
-    <text name="Change">Change</text>
+    <text name="NotSelected">未选择</text>
+    <text name="Change">改变</text>
     <text name="ChangeTenant">Change tenant</text>
-    <text name="MultiLevelMenu">Multi Level Menu</text>
-    <text name="Back">Back</text>
-    <text name="SuccessfullyRegistered">Successfully registered</text>
-    <text name="WaitingForEmailActivation">Your email address should be activated</text>
-    <text name="Roles">Roles</text>
-    <text name="DisplayName">Display Name</text>
-    <text name="Edit">Edit</text>
-    <text name="Delete">Delete</text>
-    <text name="CreateNewRole">Create new role</text>
-    <text name="RoleName">Role Name</text>
-    <text name="Actions">Actions</text>
-    <text name="CouldNotCompleteLoginOperation">Could not complete login operation. Please try again later.</text>
+    <text name="MultiLevelMenu">多级菜单</text>
+    <text name="Back">返回</text>
+    <text name="SuccessfullyRegistered">注册成功</text>
+    <text name="WaitingForEmailActivation">邮箱必须有效</text>
+    <text name="Roles">角色</text>
+    <text name="DisplayName">名称</text>
+    <text name="Edit">编辑</text>
+    <text name="Delete">删除</text>
+    <text name="CreateNewRole">新建角色</text>
+    <text name="RoleName">角色名称</text>
+    <text name="Actions">操作</text>
+    <text name="CouldNotCompleteLoginOperation">登录未完成，请重试</text>
     <text name="CouldNotValidateExternalUser">Could not validate external user</text>
-    <text name="EditRole">Edit role</text>
+    <text name="EditRole">编辑角色</text>
     <text name="EditTenant">Edit tenant</text>
-    <text name="EditUser">Edit user</text>
+    <text name="EditUser">编辑用户</text>
     <text name="TenantIdIsNotActive{0}">TenantId {0} is not active</text>
     <text name="UnknownTenantId{0}">Unknown tenantId {0}</text>
-    <text name="ThisFieldIsRequired">This field is required</text>
-    <text name="PleaseWait">Please wait...</text>
-    <text name="Administration">Administration</text>
-    <text name="ClearAll">Clear all</text>
-    <text name="ClearOthers">Clear others</text>
-    <text name="LabelOptions">Label options</text>
-    <text name="Permissions">Permissions</text>
-    <text name="RoleDescription">Role description</text>
-    <text name="Refresh">Refresh</text>
-    <text name="Create">Create</text>
-    <text name="UserDetails">User details</text>
-    <text name="UserRoles">User roles</text>
-    <text name="ConfirmPassword">Confirm password</text>
-    <text name="Version">Version</text>
-    <text name="On">On</text>
-    <text name="Off">Off</text>
-    <text name="AreYouSureWantToDelete">Are you sure want to delete {0}?</text>
-    <text name="StartTyping">Start Typing</text>
-    <text name="Skins">Skins</text>
-    <text name="Settings">Settings</text>
+    <text name="ThisFieldIsRequired">不能为空</text>
+    <text name="PleaseWait">请稍候...</text>
+    <text name="Administration">系统管理</text>
+    <text name="ClearAll">全部清空</text>
+    <text name="ClearOthers">清空其它</text>
+    <text name="LabelOptions">标签选项</text>
+    <text name="Permissions">权限</text>
+    <text name="RoleDescription">角色描述</text>
+    <text name="Refresh">刷新</text>
+    <text name="Create">创建</text>
+    <text name="UserDetails">用户详情</text>
+    <text name="UserRoles">用户角色</text>
+    <text name="ConfirmPassword">确认密码</text>
+    <text name="Version">版本</text>
+    <text name="On">开</text>
+    <text name="Off">关</text>
+    <text name="AreYouSureWantToDelete">确定删除 {0}?</text>
+    <text name="StartTyping">请输入</text>
+    <text name="Skins">皮肤</text>
+    <text name="Settings">设置</text>
   </texts>
 </localizationDictionary>
