--- a/src/Lanting.IDCode.Core/Localization/SourceFiles/IDCode.xml
+++ b/src/Lanting.IDCode.Core/Localization/SourceFiles/IDCode.xml
@@ -91,5 +91,8 @@
     <text name="StartTyping">请输入</text>
     <text name="Skins">皮肤</text>
     <text name="Settings">设置</text>
+    <text name="Tasks">生成任务</text>
+    <text name="Products">产品维护</text>
+    <text name="Codes">标识码业务</text>
   </texts>
 </localizationDictionary>
